k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bellefood-backend-service

spec:
  selector:
    app: bellefood-backend

  ports:
    - port: 80
      targetPort: 8080

  type: LoadBalancer
