k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bellefood-ingress

spec:
  rules:
    - host: api.bellefood.com

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: bellefood-backend-service

                port:
                  number: 80
